Apply flex styling to sections

--- a/index.html
+++ b/index.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="style/index.css">
+    </head>
+
+    <body>
+        <header>
+            <h1>Sterling Mount <span class="subtitle"> the Expert Puppy</span></h1>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <a href="#">Projects</a>
+            </nav>
+        </header>
+
+
+        <section id="aboutMe">
+            <img src="https://i.imgur.com/NnTvAmh.jpg" alt="Puppy in grass"/>
+            <div id="aboutMeInfo">
+                <h2>Sterling Mount</h2>
+                <a href="#">My Projects</a>
+                <h3>I'm a really good boy and I just turned <span class="boldText">6 years old</span>! I enjoy walking in my cart, peanut butter, pats, woofing, and lounging. Contact me if you need consultation in any of these fields, I'd love to help.</h3>
+            </div>
+        </section>
+
+        <section id="gallery">
+            <div>
+                <img src="https://i.imgur.com/3iS7V1h.jpg" alt="Puppy in a bike basket"/>
+                <p>Springtime Biking in Shelby Park</p>
+            </div>
+
+            <div>
+                <img src="https://i.imgur.com/04X03iw.jpg" alt="Renaissance pup"/>
+                <p>Basking in Afternoon Light</p>
+            </div>           
+
+            <div>
+                <img src="https://i.imgur.com/3JSRKky.jpg" alt="Office assistant puppy"/>
+                <p>Helping with Computer Science</p>
+            </div>           
+
+            <div>
+                <img src="https://i.imgur.com/9lcm8d6.jpg" alt="5K participant pup"/>
+                <p>Walking the East Nashville 5K</p>
+            </div>       
+
+            <div>
+                <img src="https://i.imgur.com/RkrOkjP.jpg" alt="Boardwalk puppy"/>
+                <p>Exploring the Mangroves</p>
+            </div>     
+
+            <div>
+                <img src="https://i.imgur.com/WHLIRLu.jpg" alt="Napping pup"/>
+                <p>Taking a Well Earned Day Off</p>
+            </div>    
+
+            <div>
+                <img src="https://i.imgur.com/PLt9cOx.jpg" alt="Garden assistant puppy"/>
+                <p>Overseeing the Yard Work</p>
+            </div>   
+
+            <div>
+                <img src="https://i.imgur.com/1Egz1wp.jpg" alt="Lakeside pup"/>
+                <p>Lifeguard Duty from a Basket</p>
+            </div>
+        </section>
+
+        <footer>
+            <h2>Like what you see?</h2>
+            <a href="">Contact Me</a>
+        </footer>
+
+    </body>
 </html>
