Improve spacing and add design elements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Sterling Mount <span class="subtitle"> the Expert Puppy</span></h1>
             <nav>
-                <a href="#">Home</a>
+                <a class="homeButton" href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
                 <a href="#">Projects</a>
@@ -20,52 +20,52 @@
 
 
         <section id="aboutMe">
-            <img src="https://i.imgur.com/NnTvAmh.jpg" alt="Puppy in grass"/>
+            <img src="images/topPicSterl.jpg" alt="Puppy in grass"/>
             <div id="aboutMeInfo">
                 <h2>Sterling Mount</h2>
                 <a href="#">My Projects</a>
-                <h3>I'm a really good boy and I just turned <span class="boldText">6 years old</span>! I enjoy walking in my cart, peanut butter, pats, woofing, and lounging. Contact me if you need consultation in any of these fields, I'd love to help.</h3>
+                <h3>I'm a really good boy and I just turned <span class="boldText">6 years old</span>! I enjoy walking in my cart, peanut butter, pats, woofing, and lounging. I offer consultation in any of these fields and more.</h3>
             </div>
         </section>
 
         <section id="gallery">
             <div>
-                <img src="https://i.imgur.com/3iS7V1h.jpg" alt="Puppy in a bike basket"/>
-                <p>Springtime Biking in Shelby Park</p>
+                <img src="images/1PicSterl.jpg" alt="Puppy in a bike basket"/>
+                <p>Biking in Shelby Park</p>
             </div>
 
             <div>
-                <img src="https://i.imgur.com/04X03iw.jpg" alt="Renaissance pup"/>
+                <img src="images/2PicSterl.jpg" alt="Renaissance pup"/>
                 <p>Basking in Afternoon Light</p>
             </div>           
 
             <div>
-                <img src="https://i.imgur.com/3JSRKky.jpg" alt="Office assistant puppy"/>
+                <img src="images/3PicSterl.jpg" alt="Office assistant puppy"/>
                 <p>Helping with Computer Science</p>
             </div>           
 
             <div>
-                <img src="https://i.imgur.com/9lcm8d6.jpg" alt="5K participant pup"/>
+                <img src="images/4PicSterl.jpg" alt="5K participant pup"/>
                 <p>Walking the East Nashville 5K</p>
             </div>       
 
             <div>
-                <img src="https://i.imgur.com/RkrOkjP.jpg" alt="Boardwalk puppy"/>
+                <img src="images/5PicSterl.JPG" alt="Boardwalk puppy"/>
                 <p>Exploring the Mangroves</p>
             </div>     
 
             <div>
-                <img src="https://i.imgur.com/WHLIRLu.jpg" alt="Napping pup"/>
+                <img src="images/6PicSterl.jpg" alt="Napping pup"/>
                 <p>Taking a Well Earned Day Off</p>
             </div>    
 
             <div>
-                <img src="https://i.imgur.com/PLt9cOx.jpg" alt="Garden assistant puppy"/>
+                <img src="images/7PicSterl.jpg" alt="Garden assistant puppy"/>
                 <p>Overseeing the Yard Work</p>
             </div>   
 
             <div>
-                <img src="https://i.imgur.com/1Egz1wp.jpg" alt="Lakeside pup"/>
+                <img src="images/8PicSterl.JPG" alt="Lakeside pup"/>
                 <p>Lifeguard Duty from a Basket</p>
             </div>
         </section>
