--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
 
     <body>
-        <header>
-            <h1>Sterling Mount <span class="subtitle"> the Expert Puppy</span></h1>
+        <header id="home">
+            <h1>Sterling Mount, <span class="subtitle"> the Best Pup</span></h1>
             <nav>
-                <a class="homeButton" href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a href="#">Projects</a>
+                <a class="homeButton" href="#home">Home</a>
+                <a href="#aboutMe">About</a>
+                <a href="#contact">Contact</a>
+                <a href="#gallery">Projects</a>
             </nav>
         </header>
 
@@ -70,9 +70,10 @@
             </div>
         </section>
 
-        <footer>
+        <footer id="contact">
             <h2>Like what you see?</h2>
-            <a href="">Contact Me</a>
+            <a href="#contact">Contact Me</a>
+            <a id="supportButton" href="https://eddieswheels.com/">Support Eddie's Wheels</a>
         </footer>
 
     </body>
