--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <header id="home">
-            <h1>Sterling Mount, <span class="subtitle"> the Best Pup</span></h1>
+            <h1>Sterling Mount <span class="subtitle">, #1 pup</span></h1>
             <nav>
                 <a class="homeButton" href="#home">Home</a>
                 <a href="#aboutMe">About</a>
